--- a/src/main/resources/static/work.html
+++ b/src/main/resources/static/work.html
@@ -211,7 +211,7 @@ method="get"-->
 
     function back()
     {
-        window.location = "index.html"
+        window.location = "main.html"
     }
 </script>
 </body>
