--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -70,7 +70,7 @@
         methods: {
             checkForm: function (e) {
                 this.errors = [];
-
+                alert(this.email);
                 if (!this.email){
                     this.errors.push('Укажите логин')}
                 // } else if (!this.validEmail(this.email)){
