--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -95,7 +95,7 @@
 
     function back()
     {
-        window.location = "main.html"
+        window.location = "login.html"
     }
 </script>
 </body>
