--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -13,7 +13,7 @@
 </div>
     <form id="app"
         @submit="checkForm"
-        action="http://localhost:8080/login"
+        action="/login"
         method="post"
         novalidate="true"
 
