--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -12,7 +12,7 @@
 </header>
         <form id="appreg"
               @submit="checkForm"
-              action="http://localhost:8080/registration"
+              action="/registration"
               method="post"
               novalidate="true"
         >
