--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -16,65 +16,66 @@
         action="/login"
         method="post"
         novalidate="true"
-
     >
+        <div style="color: orange; font-size: 25px" v-if="error != null" class="alert alert-danger">{{err_msg}}</div>
         <p class="errorchik" v-if="errors.length">
-            <b>Пожалуйста исправьте указанные ошибки:</b>
+            <b>Check your error and correct them:</b>
                 <p class="errorchik" v-for="error in errors">{{ error }}</p>
         </p>
         <div class="mainArea">
         <p>
-            <label for="username"><i class="e">Логин</i></label>
+            <label for="username"><i class="e">Login</i></label>
             <br/>
             <input
             id="username"
             v-model="username"
             type="email"
             name="username"
-            placeholder="Введите Логин"
+            placeholder="type Login"
             >
         </p>
         <p>
-            <label for="password"><i class="e">Пароль</i></label>
+            <label for="password"><i class="e">Password</i></label>
             <br/>
             <input
             id="password"
             v-model="password"
             type="password"
             name="password"
-            placeholder="Введите Пароль"
+            placeholder="type Password"
             >
         </p>
         </div>
         <p>
             <input
             type="submit"
-            value="Войти"
+            value="SIGN IN"
+            class="bubu"
             >
         </p>
     </form>
-    <input type="button" value="Регистрация" name="reg" onclick="reg()">
+    <input type="button" value="SIGN UP" name="reg" class="bubu" onclick="reg()">
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
 <script>
+    let urlP = new URLSearchParams(window.location.search);
     var app = new Vue({
         el: '#app',
         data: {
+            error: urlP.get('error'),
             errors: [],
             username: null,
-            password: null
+            password: null,
+            err_msg: 'Wrong Password or Username entered'
         },
         methods: {
             checkForm: function (e) {
                 this.errors = [];
 
                 if (!this.username){
-                    this.errors.push('Укажите логин')}
-                // } else if (!this.validEmail(this.email)){
-                //     this.errors.push('Укажите корректный Логин')
-                // }
+                    this.errors.push('Type Login')}
 
                 if (!this.password){
-                    this.errors.push('Укажите пароль')
+                    this.errors.push('Type Password')
                 }
 
                 if (!this.errors.length) {
